--- a/style.css
+++ b/style.css
@@ -135,9 +135,11 @@
 	text-align: right;
 	flex-direction: column;
 	z-index: 0;
+	padding: .3em;
 }
 .thumbTitle {
 	z-index: 1;
+	padding: .3em;
 }
 
 .thumb {
